Bug 26197 - Cairo doesn't build on windows
Summary: Cairo doesn't build on windows
Status: VERIFIED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: win32 backend (show other bugs)
Version: 1.9.5
Hardware: Other Windows (All)
: medium blocker
Assignee: cairo-bugs mailing list
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-24 08:03 UTC by Haakon Sporsheim
Modified: 2010-01-25 02:38 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Rename render_row to render_rows (1.28 KB, patch)
2010-01-24 08:03 UTC, Haakon Sporsheim
Details | Splinter Review

Description Haakon Sporsheim 2010-01-24 08:03:10 UTC
Created attachment 32795 [details] [review]
Rename render_row to render_rows

commit 9cd9137843f8f1c3d32bedb6510259ab3638a2c5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 19 17:11:11 2010 +0000

    spans: Pass multiple rows of identical spans to the renders.

    It is quite common amongst our geometry to have rows of repeated span
    data, for example a rounded rectangle will have repeating data between
    the top and bottom rounded corners. By passing the repeat length to the
    renderers, they may be able to use that information more efficiently,
    and the scan converters can avoid recomputing the same span data.

render_row changed to render_row, but not done properly in cairo-win32-surface.c.


commit 3a5d71c431dfb251308c3e4e02d2ea4acec90a91
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 19 19:18:54 2010 +0000

    pattern: An EXTEND_NONE surface is not opaque if we sample outside

    Fixes test/clear-source as proposed by Benjamin Otte.

cairo-win32-printing-surface.c is using _cairo_pattern_is_opaque (), but extents is not passed as an argument.
Comment 1 Haakon Sporsheim 2010-01-24 08:35:01 UTC
(In reply to comment #0)
> render_row changed to render_row, but not done properly in
> cairo-win32-surface.c.

should be render_rows of course. My patch fixes this issue!
Comment 2 Chris Wilson 2010-01-25 01:13:57 UTC
commit 386ca53f280652983870316593e510cfef59c559
Author: Haakon Sporsheim <haakon.sporsheim@gmail.com>
Date:   Sun Jan 24 16:43:42 2010 +0100

    win32: Compile fix, rename render_row to render_rows.

commit b3ba610ec05f863a0830a1f30ed130649fbadfbb
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jan 25 09:09:18 2010 +0000

    win32: Trivially fix the compile error with printing.
    
    _cairo_pattern_is_opaque() now takes the extents over which the
    operation is defined so that we make exclude the clear pixels that
    surround EXTEND_NONE surfaces when determining opacity. In order to take
    full advantage of this we need to start performing an extents query on
    the operation and pass that down to the analysis...
    
    This patch however is just the quick compile fix to pass a NULL and
    restore the old behaviour.
    
    Fixes (with previous commit):
      Bug 26197 - Cairo doesn't build on windows
      http://bugs.freedesktop.org/show_bug.cgi?id=26197


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.